added linear gradient background

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <!--<div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">-->
+  <div id="home" class="intro route bg-image" style="background-image: linear-gradient(to bottom, #0f0c29, #602b63, #24243e)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -93,8 +94,8 @@
                       <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-7">
-                    <div class="about-info">
+                  <div class="col-sm-6 col-md-7 align-items-center">
+                    <div class="about-info align-items-center">
                       <p><span class="title-s">Name: </span> <span>Jasyd David Caballero Quintero</span></p>
                       <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
                       <!--<p><span class="title-s">Email: </span> <span>contact@example.com</span></p>-->
@@ -336,9 +337,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="title-box-2">
-                    <h5 class="title-left">
-                      Send Message Us
-                    </h5>
+                    <h5 class="title-left">Talk Me</h5>
                   </div>
                   <div>
                       <form action="" method="post" role="form" class="contactForm">
