added profile photo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <!--/ Intro Skew Star /-->
   <!--<div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">-->
-  <div id="home" class="intro route bg-image" style="background-image: linear-gradient(to bottom, #0f0c29, #602b63, #24243e)">
+  <div id="home" class="intro route bg-image" style="background-image: linear-gradient(to bottom, #0f0c29, #0078ff, #24243e)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -91,7 +91,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/yo.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7 align-items-center">
@@ -396,10 +396,9 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href="https://www.facebook.com/jasydavid45"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/jasyd_draws/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://github.com/Zorienu"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
