added technologies and survey-app

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/imgs.css">
 
   <!-- =======================================================
     Theme Name: DevFolio
@@ -115,14 +116,14 @@
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span>PYTHON</span> <span class="pull-right">40%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -134,22 +135,20 @@
                       About me
                     </h5>
                   </div>
-                  <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
-                  </p>
-                  <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-                  </p>
-                  <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                  </p>
+                  <p class="lead">I'm a mechatronics engineer graduated at the University of Pamplona in Colombia, passionate about Web Development and drawing</p>
+                  <div class="title-box-2">
+                    <h5 class="title-left">Technologies</h5>
+                  </div>
+                  <img src="img/html.png" class="img" alt="html">
+                  <img src="img/css.png" class="img" alt="css">
+                  <img src="img/js.png" class="img" alt="js">
+                  <img src="img/node.png" class="img" alt="node">
+                  <img src="img/mongo.png" class="img" alt="mongo">
+                  <div class="title-box-2 mt-5">
+                    <h5 class="title-left">Willing to learn</h5>
+                  </div>
+                  <img src="img/react.png" class="img" alt="react">
+                  <img src="img/sql.png" class="img" alt="sql">
                 </div>
               </div>
             </div>
@@ -168,26 +167,27 @@
             <h3 class="title-a">
               Portfolio
             </h3>
-            <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
+            <p class="subtitle-a"></p>
             <div class="line-mf"></div>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="img/survey-app.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-1.jpg" alt="" class="img-fluid">
+                <img src="img/survey-app.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Survey App</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    <span class="w-date">22 Jan. 2021</span>
+                    </br>
+                    <a href="https://survey-app-pi.vercel.app/">Demo</a>
+                    <a href="https://survey-app-pi.vercel.app/"><i class="ion-social-github"></i> Github</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -200,126 +200,126 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-5.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-5.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
+        <!--<div class="col-md-4">-->
+          <!--<div class="work-box">-->
+            <!--<a href="img/work-2.jpg" data-lightbox="gallery-mf">-->
+              <!--<div class="work-img">-->
+                <!--<img src="img/work-2.jpg" alt="" class="img-fluid">-->
+              <!--</div>-->
+              <!--<div class="work-content">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-sm-8">-->
+                    <!--<h2 class="w-title">Loreda Cuno Nere</h2>-->
+                    <!--<div class="w-more">-->
+                      <!--<span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-4">-->
+                    <!--<div class="w-like">-->
+                      <!--<span class="ion-ios-plus-outline"></span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+          <!--<div class="work-box">-->
+            <!--<a href="img/work-3.jpg" data-lightbox="gallery-mf">-->
+              <!--<div class="work-img">-->
+                <!--<img src="img/work-3.jpg" alt="" class="img-fluid">-->
+              <!--</div>-->
+              <!--<div class="work-content">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-sm-8">-->
+                    <!--<h2 class="w-title">Mavrito Lana Dere</h2>-->
+                    <!--<div class="w-more">-->
+                      <!--<span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-4">-->
+                    <!--<div class="w-like">-->
+                      <!--<span class="ion-ios-plus-outline"></span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+          <!--<div class="work-box">-->
+            <!--<a href="img/work-4.jpg" data-lightbox="gallery-mf">-->
+              <!--<div class="work-img">-->
+                <!--<img src="img/work-4.jpg" alt="" class="img-fluid">-->
+              <!--</div>-->
+              <!--<div class="work-content">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-sm-8">-->
+                    <!--<h2 class="w-title">Bindo Laro Cado</h2>-->
+                    <!--<div class="w-more">-->
+                      <!--<span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-4">-->
+                    <!--<div class="w-like">-->
+                      <!--<span class="ion-ios-plus-outline"></span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+          <!--<div class="work-box">-->
+            <!--<a href="img/work-5.jpg" data-lightbox="gallery-mf">-->
+              <!--<div class="work-img">-->
+                <!--<img src="img/work-5.jpg" alt="" class="img-fluid">-->
+              <!--</div>-->
+              <!--<div class="work-content">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-sm-8">-->
+                    <!--<h2 class="w-title">Studio Lena Mado</h2>-->
+                    <!--<div class="w-more">-->
+                      <!--<span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-4">-->
+                    <!--<div class="w-like">-->
+                      <!--<span class="ion-ios-plus-outline"></span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+          <!--<div class="work-box">-->
+            <!--<a href="img/work-6.jpg" data-lightbox="gallery-mf">-->
+              <!--<div class="work-img">-->
+                <!--<img src="img/work-6.jpg" alt="" class="img-fluid">-->
+              <!--</div>-->
+              <!--<div class="work-content">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-sm-8">-->
+                    <!--<h2 class="w-title">Studio Big Bang</h2>-->
+                    <!--<div class="w-more">-->
+                      <!--<span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-4">-->
+                    <!--<div class="w-like">-->
+                      <!--<span class="ion-ios-plus-outline"></span>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
         
       </div>
     </div>
@@ -382,16 +382,11 @@
                     </h5>
                   </div>
                   <div class="more-info">
-                    <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
-                    </p>
+                    <p class="lead"></p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-location"></span> Pamplona, Colombia</li>
+                      <!--<li><span class="ion-ios-telephone"></span> (617) 557-0089</li>-->
+                      <!--<li><span class="ion-email"></span> contact@example.com</li>-->
                     </ul>
                   </div>
                   <div class="socials">
